--- a/index.html
+++ b/index.html
@@ -1,152 +1,171 @@
 <!DOCTYPE HTML>
 <html lang="en">
-	<head>
-		<title>oc2022</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width,initial-scale=1" />
-		<meta name="description" content="oc2022" />
-		<meta property="og:site_name" content="oc2022" />
-		<meta property="og:title" content="oc2022" />
-		<meta property="og:type" content="website" />
-		<meta property="og:description" content="oc2022" />
-		<link href="https://fonts.googleapis.com/css?display=swap&family=Archivo:600,600italic,400,400italic" rel="stylesheet" type="text/css" />
-		<link rel="stylesheet" href="assets/main.css" />
-		<noscript><link rel="stylesheet" href="assets/noscript.css" /></noscript>
-	</head>
-	<body class="is-loading">
-		<div id="wrapper">
-			<div id="main">
-				<div class="inner">
-					<div id="container01" class="style1 container default full screen">
-						<div class="wrapper">
-							<div class="inner" data-onvisible-trigger="1">
-								<h1 id="text04" class="style2">onji</h1>
-								<p id="text16" class="style3">東京都立大学 インダストリアルアート学科/学域　オープンキャンパス2022</p>
-								<ul id="icons04" class="style1 icons">
-									<li>
-										<a class="n01" href="https://domain.ext/path">
-											<svg><use xlink:href="assets/icons.svg#instagram"></use></svg>
-											<span class="label">Instagram</span>
-										</a>
-									</li><li>
-										<a class="n02" href="https://domain.ext/path/">
-											<svg><use xlink:href="assets/icons.svg#behance"></use></svg>
-											<span class="label">Behance</span>
-										</a>
-									</li><li>
-										<a class="n03" href="https://domain.ext/path">
-											<svg><use xlink:href="assets/icons.svg#email-alt"></use></svg>
-											<span class="label">Email (Alt)</span>
-										</a>
-									</li><li>
-										<a class="n04" href="https://domain.ext/path">
-											<svg><use xlink:href="assets/icons.svg#apparel"></use></svg>
-											<span class="label">Apparel</span>
-										</a>
-									</li>
-								</ul>
-								<ul id="buttons06" class="style1 buttons">
-									<li>
-										<a href="#one" class="button n01"><svg><use xlink:href="assets/icons.svg#arrow-down-alt-light"></use></svg><span class="label">nyaa</span></a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div id="container06" data-scroll-id="one" data-scroll-behavior="previous" data-scroll-offset="0" data-scroll-invisible="1" class="style2 container default">
-						<div class="wrapper">
-							<div class="inner" data-onvisible-trigger="1">
-								<h3 id="text07" class="style2">学科長挨拶</h3>
-							</div>
-						</div>
-					</div>
-					<div id="container03" class="style2 container columns">
-						<div class="wrapper">
-							<div class="inner" data-onvisible-trigger="1">
-								<div>
-									<p id="text05" class="style1"><span class="p">東京都立大学は、高等教育機関の使命である教育・研究、国際性、多様化（Diversity）のいずれにおいても世界トップレベルの大学であることを目指しており、着々と実現しつつあります。</span><span class="p">このうち研究に関しては、社会的にも高い評価をいただいており、英教育専門誌タイムズ・ハイヤー・エデュケーションが調査・発表する世界大学ランキングにおいて本学は、数ある日本の大学の中で、毎年高い順位を維持し続けています。</span><span class="p">ランキングを構成する指標の中でも、Citations（引用論文）における評価は世界水準で見てもトップクラスで、まさに本学の研究力を裏付けるものと言えるでしょう。いや、これはダミーなんですけどね。</span></p>
-								</div>
-								<div>
-									<div id="image04" class="style1 image full" data-position="center">
-										<span class="frame deferred"><img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCAxNDQwIDEwODAiIHdpZHRoPSIxNDQwIiBoZWlnaHQ9IjEwODAiIHByZXNlcnZlQXNwZWN0UmF0aW89Im5vbmUiPjxyZWN0IGZpbGw9IiMyNzMwMWMiIHdpZHRoPSIxMDAlIiBoZWlnaHQ9IjEwMCUiLz48L3N2Zz4%3D" data-src="assets/images/image04.jpg" alt="学科長" /></span>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<hr id="divider04" class="style1 full screen">
-					<div id="container04" data-scroll-id="two" data-scroll-behavior="previous" data-scroll-offset="0" data-scroll-invisible="1" class="style2 container default">
-						<div class="wrapper">
-							<div class="inner" data-onvisible-trigger="1">
-								<h2 id="text08" class="style2">学科紹介動画</h2>
-								<div id="image03" class="style1 image full" data-position="center">
-									<span class="frame deferred"><img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHg9IjAiIHk9IjAiIHZpZXdCb3g9IjAgMCAyNDAwIDE4MDAiIHdpZHRoPSIyNDAwIiBoZWlnaHQ9IjE4MDAiIHByZXNlcnZlQXNwZWN0UmF0aW89Im5vbmUiPjxyZWN0IGZpbGw9IiM0NzQyMmYiIHdpZHRoPSIxMDAlIiBoZWlnaHQ9IjEwMCUiLz48L3N2Zz4%3D" data-src="assets/images/image03.jpg" alt="" /></span>
-								</div>
-							</div>
-						</div>
-					</div>
-					<hr id="divider05" class="style1 full screen">
-					<div id="container05" data-scroll-id="three" data-scroll-behavior="previous" data-scroll-offset="0" data-scroll-invisible="1" class="style2 container default">
-						<div class="wrapper">
-							<div class="inner" data-onvisible-trigger="1">
-								<h2 id="text01" class="style2">各スタジオ紹介</h2>
-							</div>
-						</div>
-					</div>
-					<div id="image01" class="style1 image full" data-position="center">
-						<span class="frame"><img src="assets/images/image01.jpg" alt="" /></span>
-					</div>
-					<h2 id="text02" class="style4">インダストリアルアート学科は「プロダクトデザイン」と「メディアアート」の2つのコア・分野を柱に、12のスタジオで構成されています。</h2>
-					<ul id="buttons01" class="style1 buttons">
-						<li>
-							<a href="https://domain.ext/path" class="button n01"><svg><use xlink:href="assets/icons.svg#arrow-right"></use></svg><span class="label">スタジオ紹介をみる</span></a>
-						</li>
-					</ul>
-					<div id="container02" data-scroll-id="four" data-scroll-behavior="previous" data-scroll-offset="0" data-scroll-invisible="1" class="style3 container default full screen">
-						<div class="wrapper">
-							<div class="inner">
-								<h2 id="text03" class="style2">卒業生の声</h2>
-								<div id="image02" class="style1 image full" data-position="center">
-									<span class="frame"><img src="assets/images/image02.jpg" alt="" /></span>
-								</div>
-								<p id="text06" class="style1">Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque <a href="#">commodo blandit</a> enim arcu magna.</p>
-								<ul id="buttons02" class="style1 buttons">
-									<li>
-										<a href="https://domain.ext/path" class="button n01"><svg><use xlink:href="assets/icons.svg#arrow-right"></use></svg><span class="label">声をみる</span></a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<h2 id="text10" class="style2">卒業生の就職先</h2>
-					<div id="image05" class="style1 image full" data-position="center">
-						<span class="frame"><img src="assets/images/image05.jpg" alt="" /></span>
-					</div>
-					<p id="text09" class="style1">IA進路検索では、年度や企業名で卒業生の進路を検索することができます。</p>
-					<ul id="buttons03" class="style1 buttons">
-						<li>
-							<a href="https://domain.ext/path" class="button n01"><svg><use xlink:href="assets/icons.svg#arrow-right"></use></svg><span class="label">就職先一覧をみる</span></a>
-						</li>
-					</ul>
-					<div id="container07" class="style3 container default full screen">
-						<div class="wrapper">
-							<div class="inner">
-								<h2 id="text11" class="style1">よくある質問</h2>
-								<div id="image06" class="style1 image full" data-position="center">
-									<span class="frame"><img src="assets/images/image06.jpg" alt="" /></span>
+
+<head>
+	<title>oc2022</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width,initial-scale=1" />
+	<meta name="description" content="oc2022" />
+	<meta property="og:site_name" content="oc2022" />
+	<meta property="og:title" content="oc2022" />
+	<meta property="og:type" content="website" />
+	<meta property="og:description" content="oc2022" />
+
+	<!-- ▼OGP Settings▼ -->
+	<!--URLわかったらhogeをなおす-->
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="東京都立大学 インダストリアルアート学科/学域 オープンキャンパス 2022">
+	<meta property="og:description"
+		content="インダストリアルアート学科・学域のオープンキャンパスを開催します。| 2022年7月17日（日）10:00-17:00 @東京都立大学日野キャンパス">
+	<meta property="og:url" content="http://industrial-art.sd.tmu.ac.jp/hoge">
+	<meta property="og:image" content="http://industrial-art.sd.tmu.ac.jp/hoge/images/ogimage.png">
+	<meta property="og:site_name" content="東京都立大学 インダストリアルアート学科/学域 オープンキャンパス 2022">
+	<meta property="og:locale" content="ja_JP">
+	<!--<meta property="fb:app_id" content="FBのapp_id">-->
+	<!-- ▼Twitter Cards Settings▼ -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@indiploma_">
+	<!-- ▼icon-->
+	<link rel="shortcut icon" href="./images/favicon.ico">
+	<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+	<!--icon for mobile-->
+
+
+
+	<link href="https://fonts.googleapis.com/css?display=swap&family=Archivo:600,600italic,400,400italic"
+		rel="stylesheet" type="text/css" />
+	<link rel="stylesheet" href="assets/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/noscript.css" />
+	</noscript>
+</head>
+
+<body class="is-loading">
+
+	<!-- width 100% -->
+	<div class="hero">
+		<div class="title">
+			<h1><span>東京都立大学 インダストリアルアート学科/学域</span><span>オープンキャンパス2022</span></h1>
+			<ul id="icons04" class="style1 icons">
+				<li>
+					<a class="n01" href="https://domain.ext/path">
+						<svg>
+							<use xlink:href="assets/icons.svg#twitter"></use>
+						</svg>
+						<span class="label">Twitter</span>
+					</a>
+				</li>
+				<li>
+					<a class="n02" href="https://domain.ext/path/">
+						<svg>
+							<use xlink:href="assets/icons.svg#instagram"></use>
+						</svg>
+						<span class="label">Instagram</span>
+					</a>
+				</li>
+
+			</ul>
+		</div>
+		<div class="mv"></div>
+	</div>
+
+
+	<div id="wrapper">
+		<div id="main">
+			<div class="inner">
+
+				<hr id="divider04" data-scroll-id="one" data-scroll-behavior="previous" data-scroll-offset="0"
+					data-scroll-invisible="1" class="style1 full screen">
+				<div id="container04" class="style2 container default">
+					<div class="wrapper">
+						<div class="inner" data-onvisible-trigger="1">
+							<h2 id="text08" class="style2">学科紹介動画</h2>
+							<div id="video01" class="video full">
+								<div class="frame">
+									<iframe
+										src="https://www.youtube-nocookie.com/embed/xS6hIS2MTRk?autoplay=0&amp;rel=0&amp;loop=0&amp;controls=1&amp;cc_load_policy=0"
+										allowfullscreen="1"></iframe>
 								</div>
 							</div>
 						</div>
 					</div>
-					<p id="text12" class="style1">ここでは、よくある質問を見たり、気になる言葉で検索したりすることができます。</p>
-					<ul id="buttons04" class="style1 buttons">
-						<li>
-							<a href="https://domain.ext/path" class="button n01"><svg><use xlink:href="assets/icons.svg#arrow-right"></use></svg><span class="label">よくある質問へ</span></a>
-						</li>
-					</ul>
 				</div>
+				<p id="text13" class="style1">
+					インダストリアルアート学科・学域は、「プロダクトデザイン」と「メディア創生」の2つのコア・分野を柱に、12のスタジオで構成されています。各スタジオが扱う専門領域は新しいものづくりと情報メディアにまたがって多様に連携しながら、それぞれが最先端の研究を推進し、新しい価値の創造を展開していきます。
+				</p>
+				<hr id="divider05" class="style1 full screen">
+				<div id="container05" data-scroll-id="three" data-scroll-behavior="previous" data-scroll-offset="0"
+					data-scroll-invisible="1" class="style2 container default">
+					<div class="wrapper">
+						<div class="inner" data-onvisible-trigger="1">
+							<h2 id="text01" class="style2">各スタジオ紹介</h2>
+						</div>
+					</div>
+				</div>
+				<div id="image01" class="style1 image full" data-position="center">
+					<span class="frame"><img src="assets/images/image01.jpg" alt="" /></span>
+				</div>
+				<h2 id="text02" class="style4">インダストリアルアート学科は「プロダクトデザイン」と「メディアアート」の2つのコア・分野を柱に、12のスタジオで構成されています。</h2>
+				<ul id="buttons01" class="style1 buttons">
+					<li>
+						<a href="https://industrial-art.sd.tmu.ac.jp/studio.html" class="button n01"><svg>
+								<use xlink:href="assets/icons.svg#arrow-right"></use>
+							</svg><span class="label">スタジオ紹介をみる</span></a>
+					</li>
+				</ul>
+				<div id="container02" data-scroll-id="four" data-scroll-behavior="previous" data-scroll-offset="0"
+					data-scroll-invisible="1" class="style3 container default full screen">
+					<div class="wrapper">
+						<div class="inner">
+							<h2 id="text03" class="style2">卒業生の声</h2>
+							<div id="image02" class="style1 image full" data-position="center">
+								<span class="frame"><img src="assets/images/image02.jpg" alt="" /></span>
+							</div>
+							<p id="text06" class="style1">インダストリアルアート学科の教員やOB/OGのインタビューを掲載しています。</p>
+							<ul id="buttons02" class="style1 buttons">
+								<li>
+									<a href="https://industrial-art.sd.tmu.ac.jp/voices.html" class="button n01"><svg>
+											<use xlink:href="assets/icons.svg#arrow-right"></use>
+										</svg><span class="label">声をみる</span></a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<h2 id="text10" class="style2">卒業生の就職先</h2>
+				<div id="image05" class="style1 image full" data-position="center">
+					<span class="frame"><img src="assets/images/image05.jpg" alt="" /></span>
+				</div>
+				<p id="text09" class="style1">IA進路検索では、年度や企業名で卒業生の進路を検索することができます。</p>
+				<ul id="buttons03" class="style1 buttons">
+					<li>
+						<a href="https://industrial-art.sd.tmu.ac.jp/career.html" class="button n01"><svg>
+								<use xlink:href="assets/icons.svg#arrow-right"></use>
+							</svg><span class="label">就職先一覧をみる</span></a>
+					</li>
+				</ul>
+				<div id="container07" class="style3 container default full screen">
+					<div class="wrapper">
+						<div class="inner">
+							<h2 id="text11" class="style1">よくある質問</h2>
+							<div id="image06" class="style1 image full" data-position="center">
+								<span class="frame"><img src="assets/images/image06.jpg" alt="" /></span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<p id="text12" class="style1">FAQページでは、よくある質問を見たり、気になる言葉で検索したりすることができます。</p>
+				<ul id="buttons04" class="style1 buttons">
+					<li>
+						<a href="https://industrial-art.sd.tmu.ac.jp/faq.html" class="button n01"><svg>
+								<use xlink:href="assets/icons.svg#arrow-right"></use>
+							</svg><span class="label">よくある質問へ</span></a>
+					</li>
+				</ul>
 			</div>
 		</div>
-		<script src="assets/main.js"></script>
-	</body>
+	</div>
+	<script src="assets/main.js"></script>
+</body>
+
 </html>
