--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
 	<!--icon for mobile-->
 
 
+	<script>
+		(function (d) {
+			var config = {
+				kitId: 'dah5kpv',
+				scriptTimeout: 3000,
+				async: true
+			},
+				h = d.documentElement, t = setTimeout(function () { h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive"; }, config.scriptTimeout), tk = d.createElement("script"), f = false, s = d.getElementsByTagName("script")[0], a; h.className += " wf-loading"; tk.src = 'https://use.typekit.net/' + config.kitId + '.js'; tk.async = true; tk.onload = tk.onreadystatechange = function () { a = this.readyState; if (f || a && a != "complete" && a != "loaded") return; f = true; clearTimeout(t); try { Typekit.load(config) } catch (e) { } }; s.parentNode.insertBefore(tk, s)
+		})(document);
+	</script>
+
+
 
 	<link href="https://fonts.googleapis.com/css?display=swap&family=Archivo:600,600italic,400,400italic"
 		rel="stylesheet" type="text/css" />
@@ -74,53 +86,70 @@
 		<div id="main">
 			<div class="inner">
 
-				<hr id="divider04" data-scroll-id="one" data-scroll-behavior="previous" data-scroll-offset="0"
-					data-scroll-invisible="1" class="style1 full screen">
-				<div id="container04" class="style2 container default">
+
+
+				<section id="container04" class="style2 container default">
 					<div class="wrapper">
 						<div class="inner" data-onvisible-trigger="1">
-							<h2 id="text08" class="style2">学科紹介動画</h2>
-							<div id="video01" class="video full">
-								<div class="frame">
-									<iframe
-										src="https://www.youtube-nocookie.com/embed/xS6hIS2MTRk?autoplay=0&amp;rel=0&amp;loop=0&amp;controls=1&amp;cc_load_policy=0"
-										allowfullscreen="1"></iframe>
-								</div>
+
+							<h2 class="style2">学科紹介動画</h2>
+
+							<div class="youtube">
+								<iframe
+									src="https://www.youtube-nocookie.com/embed/xS6hIS2MTRk?autoplay=0&amp;rel=0&amp;loop=0&amp;controls=1&amp;cc_load_policy=0"
+									allowfullscreen="1"></iframe>
 							</div>
+
+							<p class="style1">
+								インダストリアルアート学科・学域は、「プロダクトデザイン」と「メディア創生」の2つのコア・分野を柱に、12のスタジオで構成されています。各スタジオが扱う専門領域は新しいものづくりと情報メディアにまたがって多様に連携しながら、それぞれが最先端の研究を推進し、新しい価値の創造を展開していきます。
+							</p>
+
 						</div>
+
 					</div>
-				</div>
-				<p id="text13" class="style1">
-					インダストリアルアート学科・学域は、「プロダクトデザイン」と「メディア創生」の2つのコア・分野を柱に、12のスタジオで構成されています。各スタジオが扱う専門領域は新しいものづくりと情報メディアにまたがって多様に連携しながら、それぞれが最先端の研究を推進し、新しい価値の創造を展開していきます。
-				</p>
-				<hr id="divider05" class="style1 full screen">
-				<div id="container05" data-scroll-id="three" data-scroll-behavior="previous" data-scroll-offset="0"
+				</section>
+
+
+				<section data-scroll-id="three" data-scroll-behavior="previous" data-scroll-offset="0"
 					data-scroll-invisible="1" class="style2 container default">
 					<div class="wrapper">
+
 						<div class="inner" data-onvisible-trigger="1">
-							<h2 id="text01" class="style2">各スタジオ紹介</h2>
-						</div>
-					</div>
-				</div>
-				<div id="image01" class="style1 image full" data-position="center">
-					<span class="frame"><img src="assets/images/image01.jpg" alt="" /></span>
-				</div>
-				<h2 id="text02" class="style4">インダストリアルアート学科は「プロダクトデザイン」と「メディアアート」の2つのコア・分野を柱に、12のスタジオで構成されています。</h2>
-				<ul id="buttons01" class="style1 buttons">
-					<li>
-						<a href="https://industrial-art.sd.tmu.ac.jp/studio.html" class="button n01"><svg>
-								<use xlink:href="assets/icons.svg#arrow-right"></use>
-							</svg><span class="label">スタジオ紹介をみる</span></a>
-					</li>
-				</ul>
-				<div id="container02" data-scroll-id="four" data-scroll-behavior="previous" data-scroll-offset="0"
-					data-scroll-invisible="1" class="style3 container default full screen">
-					<div class="wrapper">
-						<div class="inner">
-							<h2 id="text03" class="style2">卒業生の声</h2>
-							<div id="image02" class="style1 image full" data-position="center">
-								<span class="frame"><img src="assets/images/image02.jpg" alt="" /></span>
+							<h2 class="style2">各スタジオ紹介</h2>
+
+							<div class="style1 image full" data-position="center">
+								<span class="frame"><img src="assets/images/studio.jpg" alt="" /></span>
 							</div>
+
+							<p class="style1">インダストリアルアート学科は「プロダクトデザイン」と「メディアアート」の2つのコア・分野を柱に、12のスタジオで構成されています。
+							</p>
+
+							<ul id="buttons01" class="style1 buttons">
+								<li>
+									<a href="https://industrial-art.sd.tmu.ac.jp/studio.html" class="button n01"><svg>
+											<use xlink:href="assets/icons.svg#arrow-right"></use>
+										</svg><span class="label">スタジオ紹介をみる</span></a>
+								</li>
+							</ul>
+						</div>
+
+					</div>
+				</section>
+
+
+				<section data-scroll-id="three" data-scroll-behavior="previous" data-scroll-offset="0"
+					data-scroll-invisible="1" class="style2 container default">
+					<div class="wrapper">
+
+						<div class="inner" data-onvisible-trigger="1">
+
+							<h2 class="style2">卒業生の声</h2>
+
+							<div class="style1 image full" data-position="center">
+								<span class="frame"><img src="assets/images/voice.jpg" alt="" /></span>
+							</div>
+
+
 							<p id="text06" class="style1">インダストリアルアート学科の教員やOB/OGのインタビューを掲載しています。</p>
 							<ul id="buttons02" class="style1 buttons">
 								<li>
@@ -131,40 +160,69 @@
 							</ul>
 						</div>
 					</div>
-				</div>
-				<h2 id="text10" class="style2">卒業生の就職先</h2>
-				<div id="image05" class="style1 image full" data-position="center">
-					<span class="frame"><img src="assets/images/image05.jpg" alt="" /></span>
-				</div>
-				<p id="text09" class="style1">IA進路検索では、年度や企業名で卒業生の進路を検索することができます。</p>
-				<ul id="buttons03" class="style1 buttons">
-					<li>
-						<a href="https://industrial-art.sd.tmu.ac.jp/career.html" class="button n01"><svg>
-								<use xlink:href="assets/icons.svg#arrow-right"></use>
-							</svg><span class="label">就職先一覧をみる</span></a>
-					</li>
-				</ul>
-				<div id="container07" class="style3 container default full screen">
+				</section>
+
+
+
+				<section data-scroll-id="three" data-scroll-behavior="previous" data-scroll-offset="0"
+					data-scroll-invisible="1" class="style2 container default">
 					<div class="wrapper">
-						<div class="inner">
-							<h2 id="text11" class="style1">よくある質問</h2>
-							<div id="image06" class="style1 image full" data-position="center">
-								<span class="frame"><img src="assets/images/image06.jpg" alt="" /></span>
+
+						<div class="inner" data-onvisible-trigger="1">
+							<h2 class="style2">卒業生の就職先</h2>
+
+
+							<div class="style1 image full" data-position="center">
+								<span class="frame"><img src="assets/images/career.jpg" alt="" /></span>
 							</div>
+
+							<p class="style1">IA進路検索では、年度や企業名で卒業生の進路を検索することができます。</p>
+
+							<ul id="buttons03" class="style1 buttons">
+								<li>
+									<a href="https://industrial-art.sd.tmu.ac.jp/career.html" class="button n01"><svg>
+											<use xlink:href="assets/icons.svg#arrow-right"></use>
+										</svg><span class="label">就職先一覧をみる</span></a>
+								</li>
+							</ul>
+						</div>
+				</section>
+
+
+				<section data-scroll-id="three" data-scroll-behavior="previous" data-scroll-offset="0"
+					data-scroll-invisible="1" class="style2 container default">
+					<div class="wrapper">
+						<div class="inner" data-onvisible-trigger="1">
+
+
+							<h2 class="style2">よくある質問</h2>
+
+							<div class="style1 image full" data-position="center">
+								<span class="frame"><img src="assets/images/faq.jpg" alt="" /></span>
+							</div>
+
+							<p class="style1">FAQページでは、よくある質問を見たり、気になる言葉で検索したりすることができます。</p>
+							<ul id="buttons04" class="style1 buttons">
+								<li>
+									<a href="https://industrial-art.sd.tmu.ac.jp/faq.html" class="button n01"><svg>
+											<use xlink:href="assets/icons.svg#arrow-right"></use>
+										</svg><span class="label">よくある質問へ</span></a>
+								</li>
+							</ul>
 						</div>
 					</div>
-				</div>
-				<p id="text12" class="style1">FAQページでは、よくある質問を見たり、気になる言葉で検索したりすることができます。</p>
-				<ul id="buttons04" class="style1 buttons">
-					<li>
-						<a href="https://industrial-art.sd.tmu.ac.jp/faq.html" class="button n01"><svg>
-								<use xlink:href="assets/icons.svg#arrow-right"></use>
-							</svg><span class="label">よくある質問へ</span></a>
-					</li>
-				</ul>
+				</section>
+
+
 			</div>
 		</div>
+
+		<footer></footer>
+
+
 	</div>
+
+
 	<script src="assets/main.js"></script>
 </body>
 
