構造なんとかなった

--- a/index.html
+++ b/index.html
@@ -217,7 +217,10 @@
 			</div>
 		</div>
 
-		<footer></footer>
+		<footer>
+			<p> &copy; 2022 Department of Industrial Art, Tokyo Metropolitan University </p>
+		</footer>
+
 
 
 	</div>
